se cambia el tamaño de las fuentes

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </h3>
                 <h4 class="roboto-light fs-5">Clínica Dental Quijada</h4>
                 
-                <i class="fa-solid fa-location-dot roboto-light">
+                <i class="fa-solid fa-location-dot roboto-light text-left">
                   <span class="roboto-light">1342, Blanco Encalada, Chile</span>
                 </i> 
                 <hr>
@@ -213,7 +213,7 @@
                               San Pedro de Atacama : 1 o 2 noches en alojamiento a elección
                             </h3>
                             <h4 class="roboto-light fs-5">D-Latam Travel</h4>
-                            <br />
+                           
                              <ul class="list-group list-group-flush"><hr>
                             <li class="list-group-item text-end fs-3">
                               $80.200 <a class="fs-1"> $44.100</a>
